Add additional tools

--- a/conf/machine/ifc1410-64b.conf
+++ b/conf/machine/ifc1410-64b.conf
@@ -23,5 +23,7 @@ EXTRA_IMAGEDEPENDS += "fm-ucode rcw"
 
 USE_VT ?= "0"
 
-IMAGE_INSTALL_append = " kernel-image kernel-devicetree nfs-utils"
+# EXTRA_IMAGE_FEATURES += "dev-pkgs "
+# IMAGE_INSTALL_append = " kernel-image kernel-devicetree nfs-utils readline boost curl libxml2 zlib libpng kernel-devsrc nano tree"
+IMAGE_INSTALL_append = " kernel-image kernel-devicetree nfs-utils readline boost curl libxml2 zlib libpng nano tree"
 
