Remove IOxOS kernel patch and put devicetree and defconfig in meta layer
	This way it is easier to maintain and work with

--- a/conf/machine/ifc1410.conf
+++ b/conf/machine/ifc1410.conf
@@ -15,7 +15,7 @@ UBOOT_CONFIG[nor] = "IFC1410_defconfig"
 HV_CFG_M = "t2080rdb"
 
 KERNEL_DEVICETREE ?= "fsl/ifc1410.dtb"
-KERNEL_DEFCONFIG ?= "ifc1410_corenet64_smp_defconfig"
+KERNEL_DEFCONFIG ?= "ifc1410_defconfig"
 
 JFFS2_ERASEBLOCK = "0x10000"
 
