--- a/recipes-kernel/linux/linux-qoriq-4.9/ifc1410.dtsi
+++ b/recipes-kernel/linux/linux-qoriq-4.9/ifc1410.dtsi
@@ -33,8 +33,8 @@
  */
 
 / {
-	model = "fsl,T2080RDB";
-	compatible = "fsl,T2080RDB";
+	model = "fsl,T2081QDS";
+	compatible = "fsl,T2081QDS";
 	#address-cells = <2>;
 	#size-cells = <2>;
 	interrupt-parent = <&mpic>;
