--- a/recipes-kernel/linux/linux-qoriq-4.9/ifc1410_4_9_defconfig
+++ b/recipes-kernel/linux/linux-qoriq-4.9/ifc1410_4_9_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 4.9.79 Kernel Configuration
+# Linux/powerpc 4.9.124 Kernel Configuration
 #
 CONFIG_PPC64=y
 
@@ -62,6 +62,7 @@ CONFIG_GENERIC_BUG=y
 # CONFIG_EPAPR_BOOT is not set
 CONFIG_DEFAULT_UIMAGE=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
+CONFIG_ARCH_SUSPEND_POSSIBLE=y
 # CONFIG_PPC_DCR_NATIVE is not set
 # CONFIG_PPC_DCR_MMIO is not set
 # CONFIG_PPC_OF_PLATFORM_PCI is not set
@@ -108,6 +109,7 @@ CONFIG_GENERIC_MSI_IRQ=y
 # CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
+# CONFIG_GENERIC_IRQ_DEBUGFS is not set
 CONFIG_GENERIC_TIME_VSYSCALL_OLD=y
 CONFIG_GENERIC_CLOCKEVENTS=y
 CONFIG_ARCH_HAS_TICK_BROADCAST=y
@@ -342,7 +344,7 @@ CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
 CONFIG_LOCK_SPIN_ON_OWNER=y
-# CONFIG_FREEZER is not set
+CONFIG_FREEZER=y
 CONFIG_PPC_MSI_BITMAP=y
 # CONFIG_PPC_XICS is not set
 # CONFIG_PPC_ICP_NATIVE is not set
@@ -360,6 +362,7 @@ CONFIG_FSL_CORENET_RCPM=y
 CONFIG_FSL_SOC_BOOKE=y
 # CONFIG_PPC_QEMU_E500 is not set
 CONFIG_CORENET_GENERIC=y
+CONFIG_FSL_QORIQ_PM=y
 # CONFIG_KVM_GUEST is not set
 CONFIG_EPAPR_PARAVIRT=y
 CONFIG_PPC_OF_BOOT_TRAMPOLINE=y
@@ -393,7 +396,6 @@ CONFIG_PPC_EPAPR_HV_PIC=y
 #
 # CONFIG_CPU_IDLE is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
-CONFIG_QE_GPIO=y
 # CONFIG_FSL_ULI1575 is not set
 # CONFIG_GEN_RTC is not set
 # CONFIG_SIMPLE_GPIO is not set
@@ -422,7 +424,8 @@ CONFIG_HUGETLB_PAGE_SIZE_VARIABLE=y
 # CONFIG_MATH_EMULATION is not set
 CONFIG_IOMMU_HELPER=y
 CONFIG_SWIOTLB=y
-# CONFIG_HOTPLUG_CPU is not set
+CONFIG_HOTPLUG_CPU=y
+CONFIG_ARCH_CPU_PROBE_RELEASE=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 CONFIG_ARCH_HAS_WALK_MEMORY=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
@@ -467,8 +470,18 @@ CONFIG_FORCE_MAX_ZONEORDER=13
 # CONFIG_SCHED_SMT is not set
 # CONFIG_CMDLINE_BOOL is not set
 CONFIG_EXTRA_TARGETS=""
+CONFIG_SUSPEND=y
+CONFIG_SUSPEND_FREEZER=y
+# CONFIG_SUSPEND_SKIP_SYNC is not set
 # CONFIG_HIBERNATION is not set
-# CONFIG_PM is not set
+CONFIG_PM_SLEEP=y
+CONFIG_PM_SLEEP_SMP=y
+# CONFIG_PM_AUTOSLEEP is not set
+# CONFIG_PM_WAKELOCKS is not set
+CONFIG_PM=y
+# CONFIG_PM_DEBUG is not set
+CONFIG_PM_CLK=y
+# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_SECCOMP=y
 CONFIG_ISA_DMA_API=y
 
@@ -497,6 +510,7 @@ CONFIG_PCIEASPM=y
 CONFIG_PCIEASPM_DEFAULT=y
 # CONFIG_PCIEASPM_POWERSAVE is not set
 # CONFIG_PCIEASPM_PERFORMANCE is not set
+CONFIG_PCIE_PME=y
 # CONFIG_PCIE_DPC is not set
 # CONFIG_PCIE_PTM is not set
 CONFIG_PCI_BUS_ADDR_T_64BIT=y
@@ -1043,16 +1057,44 @@ CONFIG_NET_VENDOR_EXAR=y
 # CONFIG_S2IO is not set
 # CONFIG_VXGE is not set
 CONFIG_NET_VENDOR_FREESCALE=y
-CONFIG_FSL_FMAN=y
+# CONFIG_FSL_FMAN is not set
 # CONFIG_FSL_PQ_MDIO is not set
 CONFIG_FSL_XGMAC_MDIO=y
-# CONFIG_UCC_GETH is not set
 # CONFIG_GIANFAR is not set
 
 #
 # Frame Manager support
 #
-CONFIG_FSL_DPAA_ETH=y
+CONFIG_FSL_SDK_FMAN=y
+# CONFIG_FSL_SDK_FMAN_TEST is not set
+
+#
+# FMAN Processor support
+#
+# CONFIG_FMAN_P3040_P4080_P5020 is not set
+# CONFIG_FMAN_P1023 is not set
+CONFIG_FMAN_V3H=y
+# CONFIG_FMAN_V3L is not set
+# CONFIG_FMAN_MIB_CNT_OVF_IRQ_EN is not set
+CONFIG_FSL_FM_MAX_FRAME_SIZE=1522
+CONFIG_FSL_FM_RX_EXTRA_HEADROOM=64
+# CONFIG_FMAN_PFC is not set
+CONFIG_FSL_SDK_DPAA_ETH=y
+# CONFIG_FSL_DPAA_HOOKS is not set
+CONFIG_FSL_DPAA_OFFLINE_PORTS=y
+CONFIG_FSL_DPAA_ADVANCED_DRIVERS=y
+# CONFIG_FSL_DPAA_ETH_JUMBO_FRAME is not set
+CONFIG_FSL_DPAA_TS=y
+CONFIG_FSL_DPAA_1588=y
+CONFIG_FSL_DPAA_ETH_USE_NDO_SELECT_QUEUE=y
+CONFIG_FSL_DPAA_ETH_MAX_BUF_COUNT=128
+CONFIG_FSL_DPAA_ETH_REFILL_THRESHOLD=80
+CONFIG_FSL_DPAA_CS_THRESHOLD_1G=0x06000000
+CONFIG_FSL_DPAA_CS_THRESHOLD_10G=0x10000000
+CONFIG_FSL_DPAA_INGRESS_CS_THRESHOLD=0x10000000
+CONFIG_FSL_DPAA_ETH_DEBUGFS=y
+# CONFIG_FSL_DPAA_ETH_DEBUG is not set
+# CONFIG_FSL_DPAA_DBG_LOOP is not set
 CONFIG_NET_VENDOR_HP=y
 # CONFIG_HP100 is not set
 CONFIG_NET_VENDOR_INTEL=y
@@ -1155,7 +1197,6 @@ CONFIG_NET_VENDOR_WIZNET=y
 # CONFIG_WIZNET_W5100 is not set
 # CONFIG_WIZNET_W5300 is not set
 CONFIG_NET_VENDOR_XILINX=y
-# CONFIG_XILINX_LL_TEMAC is not set
 # CONFIG_FDDI is not set
 # CONFIG_HIPPI is not set
 CONFIG_PHYLIB=y
@@ -1275,6 +1316,7 @@ CONFIG_TTY=y
 CONFIG_VT=y
 CONFIG_CONSOLE_TRANSLATIONS=y
 CONFIG_VT_CONSOLE=y
+CONFIG_VT_CONSOLE_SLEEP=y
 CONFIG_HW_CONSOLE=y
 CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_UNIX98_PTYS=y
@@ -1320,7 +1362,6 @@ CONFIG_SERIAL_8250_FSL=y
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_JSM is not set
-CONFIG_SERIAL_QE=m
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
@@ -1472,6 +1513,7 @@ CONFIG_PPS=y
 # PTP clock support
 #
 CONFIG_PTP_1588_CLOCK=y
+CONFIG_PTP_1588_CLOCK_DPAA=y
 
 #
 # Enable PHYLIB and NETWORK_PHY_TIMESTAMPING to see the additional clocks.
@@ -2022,7 +2064,6 @@ CONFIG_UIO=y
 # CONFIG_UIO_FSL_ELBC_GPCM is not set
 # CONFIG_UIO_PRUSS is not set
 # CONFIG_UIO_MF624 is not set
-# CONFIG_VFIO is not set
 CONFIG_VIRT_DRIVERS=y
 CONFIG_FSL_HV_MANAGER=y
 
@@ -2035,9 +2076,60 @@ CONFIG_FSL_HV_MANAGER=y
 #
 # Microsoft Hyper-V guest support
 #
-# CONFIG_STAGING is not set
+CONFIG_STAGING=y
+# CONFIG_COMEDI is not set
+
+#
+# Speakup console speech
+#
+# CONFIG_SPEAKUP is not set
+# CONFIG_STAGING_MEDIA is not set
+
+#
+# Android
+#
+# CONFIG_STAGING_BOARD is not set
+# CONFIG_MTD_SPINAND_MT29F is not set
+# CONFIG_LNET is not set
+# CONFIG_DGNC is not set
+# CONFIG_GS_FPGABOOT is not set
+# CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
+# CONFIG_MOST is not set
+# CONFIG_GREYBUS is not set
+CONFIG_FSL_SDK_DPA=y
+
+#
+# Freescale Datapath QMan/BMan options
+#
+# CONFIG_FSL_DPA_CHECKING is not set
+CONFIG_FSL_DPA_CAN_WAIT=y
+CONFIG_FSL_DPA_CAN_WAIT_SYNC=y
+CONFIG_FSL_DPA_PIRQ_FAST=y
+CONFIG_FSL_DPA_PIRQ_SLOW=y
+CONFIG_FSL_DPA_PORTAL_SHARE=y
+CONFIG_FSL_SDK_BMAN=y
+CONFIG_FSL_BMAN_CONFIG=y
 # CONFIG_FSL_BMAN_TEST is not set
+CONFIG_FSL_BMAN_DEBUGFS=y
+CONFIG_FSL_SDK_QMAN=y
+CONFIG_FSL_QMAN_POLL_LIMIT=32
+CONFIG_FSL_QMAN_CONFIG=y
 # CONFIG_FSL_QMAN_TEST is not set
+CONFIG_FSL_QMAN_DEBUGFS=y
+CONFIG_FSL_QMAN_FQD_SZ=10
+CONFIG_FSL_QMAN_PFDR_SZ=13
+CONFIG_FSL_QMAN_CI_SCHED_CFG_SRCCIV=4
+CONFIG_FSL_QMAN_CI_SCHED_CFG_SRQ_W=3
+CONFIG_FSL_QMAN_CI_SCHED_CFG_RW_W=2
+CONFIG_FSL_QMAN_CI_SCHED_CFG_BMAN_W=2
+CONFIG_FSL_QMAN_PIRQ_DQRR_ITHRESH=12
+CONFIG_FSL_QMAN_PIRQ_MR_ITHRESH=4
+CONFIG_FSL_QMAN_PIRQ_IPERIOD=100
+CONFIG_FSL_QMAN_FQ_LOOKUP=y
+CONFIG_QMAN_CEETM_UPDATE_PERIOD=1000
+CONFIG_FSL_QMAN_INIT_TIMEOUT=10
+# CONFIG_FSL_USDPAA is not set
+# CONFIG_FSL_PPFE is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
@@ -2069,14 +2161,12 @@ CONFIG_CLK_QORIQ=y
 # CONFIG_SH_TIMER_TMU is not set
 # CONFIG_EM_TIMER_STI is not set
 # CONFIG_MAILBOX is not set
-CONFIG_IOMMU_API=y
 CONFIG_IOMMU_SUPPORT=y
 
 #
 # Generic IOMMU Pagetable Support
 #
-CONFIG_OF_IOMMU=y
-CONFIG_FSL_PAMU=y
+# CONFIG_FSL_PAMU is not set
 
 #
 # Remoteproc drivers
@@ -2094,11 +2184,9 @@ CONFIG_FSL_PAMU=y
 #
 # Broadcom SoC drivers
 #
-CONFIG_FSL_DPAA=y
-# CONFIG_FSL_DPAA_CHECKING is not set
-CONFIG_QUICC_ENGINE=y
-CONFIG_UCC_SLOW=y
-CONFIG_UCC=y
+# CONFIG_FSL_DPAA is not set
+# CONFIG_QUICC_ENGINE is not set
+CONFIG_FSL_SLEEP_FSM=y
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
 # CONFIG_PM_DEVFREQ is not set
@@ -2391,7 +2479,6 @@ CONFIG_DECOMPRESS_LZMA=y
 CONFIG_DECOMPRESS_XZ=y
 CONFIG_DECOMPRESS_LZO=y
 CONFIG_DECOMPRESS_LZ4=y
-CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT_MAP=y
@@ -2521,6 +2608,7 @@ CONFIG_RCU_TRACE=y
 # CONFIG_RCU_EQS_DEBUG is not set
 # CONFIG_DEBUG_WQ_FORCE_RR_CPU is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
+# CONFIG_CPU_HOTPLUG_STATE_CONTROL is not set
 # CONFIG_NOTIFIER_ERROR_INJECTION is not set
 # CONFIG_FAULT_INJECTION is not set
 # CONFIG_LATENCYTOP is not set
@@ -2610,6 +2698,7 @@ CONFIG_KEYS=y
 CONFIG_KEYS_COMPAT=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
+# CONFIG_SECURE_KEYS is not set
 # CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEY_DH_OPERATIONS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
@@ -2640,6 +2729,7 @@ CONFIG_CRYPTO_RNG_DEFAULT=y
 CONFIG_CRYPTO_AKCIPHER2=y
 CONFIG_CRYPTO_AKCIPHER=y
 CONFIG_CRYPTO_KPP2=y
+CONFIG_CRYPTO_KPP=y
 CONFIG_CRYPTO_ACOMP2=y
 CONFIG_CRYPTO_RSA=y
 # CONFIG_CRYPTO_DH is not set
@@ -2763,6 +2853,7 @@ CONFIG_CRYPTO_DEV_FSL_CAAM_JR=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_RINGSIZE=9
 # CONFIG_CRYPTO_DEV_FSL_CAAM_INTC is not set
 CONFIG_CRYPTO_DEV_FSL_CAAM_CRYPTO_API=y
+CONFIG_CRYPTO_DEV_FSL_CAAM_CRYPTO_API_QI=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_AHASH_API=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_PKC_API=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_RNG_API=y
