--- a/conf/machine/ifc1410.conf
+++ b/conf/machine/ifc1410.conf
@@ -14,7 +14,7 @@ UBOOT_CONFIG[nor] = "IFC1410_defconfig"
 
 HV_CFG_M = "t2080rdb"
 
-KERNEL_DEVICETREE ?= "fsl/ifc1410.dtb"
+KERNEL_DEVICETREE ?= "fsl/ifc1410-sdk.dtb"
 KERNEL_DEFCONFIG ?= "ifc1410_defconfig"
 
 JFFS2_ERASEBLOCK = "0x10000"
