Add perl module POSIX
	Required by EPICS startup script

--- a/conf/machine/ifc1410.conf
+++ b/conf/machine/ifc1410.conf
@@ -25,5 +25,5 @@ USE_VT ?= "0"
 
 # EXTRA_IMAGE_FEATURES += "dev-pkgs "
 # IMAGE_INSTALL_append = " kernel-image kernel-devicetree nfs-utils readline boost curl libxml2 zlib libpng kernel-devsrc nano tree"
-IMAGE_INSTALL_append = " kernel-image kernel-devicetree nfs-utils readline boost curl libxml2 zlib libpng nano tree"
+IMAGE_INSTALL_append = " kernel-image kernel-devicetree nfs-utils readline boost curl libxml2 zlib libpng nano tree perl perl-module-posix"
 
