Add TscMon tool
	Add tool and run ddr calibration on boot

--- a/conf/machine/ifc1410-64b.conf
+++ b/conf/machine/ifc1410-64b.conf
@@ -25,6 +25,6 @@ USE_VT ?= "0"
 
 IMAGE_INSTALL_append = " kernel-image kernel-devicetree nfs-utils readline \
                          boost curl libxml2 zlib libpng nano tree perl \
-                         perl-module-posix kernel-module-tsc"
+                         perl-module-posix kernel-module-tsc tscmon"
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 
