Fixup LAYERSERIES_COMPAT_ifc1410 bitbake warning

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,6 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "ifc1410"
 BBFILE_PATTERN_ifc1410 = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ifc1410 = "6"
+
+LAYERSERIES_COMPAT_ifc1410 = "sumo"
+
