Remove ttyEHV0 from inittab

--- a/conf/machine/ifc1410-64b.conf
+++ b/conf/machine/ifc1410-64b.conf
@@ -29,3 +29,4 @@ IMAGE_INSTALL_append = " kernel-image kernel-devicetree nfs-utils readline \
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
 
+SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS1"
