--- a/conf/machine/ifc1410-64b.conf
+++ b/conf/machine/ifc1410-64b.conf
@@ -23,7 +23,7 @@ EXTRA_IMAGEDEPENDS += "fm-ucode rcw"
 
 USE_VT ?= "0"
 
-IMAGE_INSTALL_append = " kernel-image kernel-devicetree nfs-utils readline \
+IMAGE_INSTALL_append = " eth-config fmc nfs-utils readline \
                          boost curl libxml2 zlib libpng nano tree perl \
                          perl-module-posix kernel-module-tsc tscmon"
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
