--- a/recipes-bsp/u-boot/u-boot-qoriq-2017.12/IFC1410_defconfig
+++ b/recipes-bsp/u-boot/u-boot-qoriq-2017.12/IFC1410_defconfig
@@ -22,13 +22,14 @@ CONFIG_CMD_PING=y
 CONFIG_CMD_EXT2=y
 CONFIG_CMD_FAT=y
 CONFIG_CMD_MTDPARTS=y
-CONFIG_MTDIDS_DEFAULT="nor0=fe8000000.nor,nand0=fff800000.flash, spi0=spife110000.1"
-CONFIG_MTDPARTS_DEFAULT="mtdparts=fe8000000.nor:1m(uboot),5m(kernel), 128k(dtb),96m(fs),-(user);fff800000.flash:1m(uboot), 5m(kernel),128k(dtb),96m(fs),-(user);spife110000.1: 1m(uboot),5m(kernel),128k(dtb),-(user)"
+CONFIG_MTDIDS_DEFAULT="nor1=spi32766.0"
+CONFIG_MTDPARTS_DEFAULT="mtdparts=spi32766.0:50m(kernel),1m(dtb),-(free)"
 # CONFIG_CMD_IRQ is not set
 CONFIG_FSL_CAAM=y
 CONFIG_MTD_NOR_FLASH=y
 CONFIG_SPI_FLASH=y
 CONFIG_SPI_FLASH_STMICRO=y
+CONFIG_SPI_FLASH_MTD=y
 CONFIG_PHYLIB=y
 CONFIG_NETDEVICES=y
 CONFIG_PHY_GIGE=y
