Disable PTP 1588 clock

--- a/recipes-kernel/linux/linux-qoriq-4.9/ifc1410_4_9_defconfig
+++ b/recipes-kernel/linux/linux-qoriq-4.9/ifc1410_4_9_defconfig
@@ -616,7 +616,7 @@ CONFIG_IPV6_NDISC_NODETYPE=y
 # CONFIG_IPV6_MULTIPLE_TABLES is not set
 # CONFIG_IPV6_MROUTE is not set
 # CONFIG_NETWORK_SECMARK is not set
-CONFIG_NET_PTP_CLASSIFY=y
+# CONFIG_NET_PTP_CLASSIFY is not set
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 # CONFIG_NETFILTER is not set
 # CONFIG_IP_DCCP is not set
@@ -986,7 +986,7 @@ CONFIG_FSL_DPAA_OFFLINE_PORTS=y
 CONFIG_FSL_DPAA_ADVANCED_DRIVERS=y
 # CONFIG_FSL_DPAA_ETH_JUMBO_FRAME is not set
 CONFIG_FSL_DPAA_TS=y
-CONFIG_FSL_DPAA_1588=y
+# CONFIG_FSL_DPAA_1588 is not set
 CONFIG_FSL_DPAA_ETH_USE_NDO_SELECT_QUEUE=y
 CONFIG_FSL_DPAA_ETH_MAX_BUF_COUNT=128
 CONFIG_FSL_DPAA_ETH_REFILL_THRESHOLD=80
@@ -1373,8 +1373,8 @@ CONFIG_PPS=y
 #
 # PTP clock support
 #
-CONFIG_PTP_1588_CLOCK=y
-CONFIG_PTP_1588_CLOCK_DPAA=y
+# CONFIG_PTP_1588_CLOCK is not set
+# CONFIG_PTP_1588_CLOCK_DPAA is not set
 
 #
 # Enable PHYLIB and NETWORK_PHY_TIMESTAMPING to see the additional clocks.
