Add screen tool

--- a/conf/machine/ifc1410-64b.conf
+++ b/conf/machine/ifc1410-64b.conf
@@ -27,7 +27,7 @@ IMAGE_INSTALL_append = " i2c-tools eth-config fmc nfs-utils readline \
                          boost curl libxml2 zlib libpng nano tree perl \
                          perl-module-posix kernel-module-tsc tscmon \
                          coreutils sysfsutils sysklogd libhugetlbfs \
-                         kmod kernel-modules sysstat pciutils"
+                         kmod kernel-modules sysstat pciutils screen"
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
 
