--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,15 +11,23 @@ build:
     - docker
   stage: build
   image: crops/yocto:debian-9-base
+  before_script:
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan -t rsa gitlab.esss.lu.se >> ~/.ssh/known_hosts
   script:
     - . ./setup-env -m ifc1410-64b
     - bitbake ess-image
   artifacts:
     paths:
-      - tmp/deploy/images/ifc1410-64b
-    expire_in: 12 hour
+      - build_ifc1410-64b/tmp/deploy/images/ifc1410-64b
+      - sstate-cache/
+      - downloads/
+    expire_in: 24 hour
 
-release:
+release_sstate:
   tags:
     - docker
   stage: release
@@ -27,3 +35,42 @@ release:
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd sstate-cache && jfrog rt upload --flat=false "*" yocto/sstate/
+
+release_downloads:
+  tags:
+    - docker
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd downloads && find . -type f -name '*.done' -exec rm {} + && if [ -d git2 ]; then rm -r git2/; fi
+    - jfrog rt upload --flat=false "*.tar.bz2" yocto/downloads/
+    - jfrog rt upload --flat=false "*.tar.gz" yocto/downloads/
+    - jfrog rt upload --flat=false "*.tar.xz" yocto/downloads/
+    - jfrog rt upload --flat=false "*.tgz" yocto/downloads/
+    - jfrog rt upload --flat=false "*.zip" yocto/downloads/
+
+release_images_tags:
+  only:
+    - tags
+  tags:
+    - docker
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_ifc1410-64b/tmp/deploy/images/ifc1410-64b && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_COMMIT_TAG/
+
+release_images_branches_web:
+  only:
+    - branches
+    - web
+  tags:
+    - docker
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_ifc1410-64b/tmp/deploy/images/ifc1410-64b && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_PIPELINE_ID/
