--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,9 +62,8 @@ release_images_tags:
     - cd build_ifc1410-64b/tmp/deploy/images/ifc1410-64b && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_COMMIT_TAG/
 
-release_images_branches_web:
+release_images_web:
   only:
-    - branches
     - web
   tags:
     - docker
