--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
     - ssh-keyscan -t rsa gitlab.esss.lu.se >> ~/.ssh/known_hosts
   script:
     - . ./setup-env -m ifc1410-64b
-    - bitbake ess-image
+    - bitbake ifc14xx-image
   artifacts:
     paths:
       - build_ifc1410-64b/tmp/deploy/images/ifc1410-64b
