--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
   - build
   - release
 
-build:
+build_image:
   tags:
     - docker
   stage: build
@@ -25,6 +25,25 @@ build:
       - build_ifc1410-64b/tmp/deploy/images/ifc1410-64b
       - sstate-cache/
       - downloads/
+    expire_in: 24 hour
+
+build_toolchain:
+  tags:
+    - docker
+  stage: build
+  image: crops/yocto:debian-9-base
+  before_script:
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan -t rsa gitlab.esss.lu.se >> ~/.ssh/known_hosts
+  script:
+    - . ./setup-env -m ifc1410-64b
+    - bitbake ifc14xx-toolchain
+  artifacts:
+    paths:
+      - build_ifc1410-64b/tmp/deploy/sdk
     expire_in: 24 hour
 
 release_sstate:
@@ -73,3 +92,4 @@ release_images_web:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_ifc1410-64b/tmp/deploy/images/ifc1410-64b && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_PIPELINE_ID/
+
