Rename kernel and u-boot from ifc1410 to ifc14xx

--- a/sources/meta-ioxos/conf/layer.conf
+++ b/sources/meta-ioxos/conf/layer.conf
@@ -5,9 +5,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "ifc1410"
-BBFILE_PATTERN_ifc1410 = "^${LAYERDIR}/"
-BBFILE_PRIORITY_ifc1410 = "6"
+BBFILE_COLLECTIONS += "ifc14xx"
+BBFILE_PATTERN_ifc14xx = "^${LAYERDIR}/"
+BBFILE_PRIORITY_ifc14xx = "6"
 
-LAYERSERIES_COMPAT_ifc1410 = "sumo"
+LAYERSERIES_COMPAT_ifc14xx = "sumo"
 
