--- a/sources/meta-ioxos/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ioxos/conf/machine/ifc14xx-64b.conf
@@ -10,12 +10,12 @@ require conf/machine/include/e6500-64b.inc
 SOC_FAMILY = "t2:t2080"
 
 UBOOT_CONFIG ??= "nor"
-UBOOT_CONFIG[nor] = "IFC1410_defconfig"
+UBOOT_CONFIG[nor] = "IFC14XX_defconfig"
 
 HV_CFG_M = "t2080rdb"
 
-KERNEL_DEVICETREE ?= "fsl/ifc1410-sdk.dtb"
-KERNEL_DEFCONFIG ?= "ifc1410_defconfig"
+KERNEL_DEVICETREE ?= "fsl/ifc14xx-sdk.dtb"
+KERNEL_DEFCONFIG ?= "ifc14xx_defconfig"
 
 JFFS2_ERASEBLOCK = "0x10000"
 
