Don't change TARGET_VENDOR and SDK_VENDOR

--- a/sources/meta-ioxos/conf/distro/ifc14xx.conf
+++ b/sources/meta-ioxos/conf/distro/ifc14xx.conf
@@ -4,9 +4,9 @@ DISTRO = "ifc14xx"
 DISTRO_NAME = "IFC14XX QorIQ SDK"
 MAINTAINER = "Freescale Yocto Team <meta-freescale@yoctoproject.org>"
 
-TARGET_VENDOR = "-ifc14xx"
+TARGET_VENDOR = "-fsl"
 
-SDK_VENDOR = "-ifc14xxsdk"
+SDK_VENDOR = "-fslsdk"
 SDK_NAME_PREFIX = "${DISTRO}"
 SDK_VERSION = "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}-${PREFERRED_VERSION_linux-qoriq_qoriq-ppc}"
 
