Configure the XFI interfaces
	2x10G interfaces routed to the RTM.
	Fixes ICSHWI-1361

--- a/sources/meta-ioxos/recipes-kernel/linux/linux-qoriq-4.9/ifc14xx-pre.dtsi
+++ b/sources/meta-ioxos/recipes-kernel/linux/linux-qoriq-4.9/ifc14xx-pre.dtsi
@@ -55,6 +55,8 @@
 		fman0 = &fman0;
 		ethernet0 = &enet0;
 		ethernet1 = &enet1;
+		ethernet2 = &enet6;
+		ethernet3 = &enet7;
 
 		pci0 = &pci0;
 		pci1 = &pci1;
