--- a/sources/meta-ioxos/recipes-kernel/linux/linux-qoriq-4.9/ifc14xx-sdk.dts
+++ b/sources/meta-ioxos/recipes-kernel/linux/linux-qoriq-4.9/ifc14xx-sdk.dts
@@ -21,6 +21,14 @@
 			compatible = "fsl,dpa-ethernet";
 			fsl,fman-mac = <&enet1>;
 		};
+		ethernet@2 {
+			compatible = "fsl,t2080-dpa-ethernet","fsl,dpa-ethernet";
+			fsl,fman-mac = <&enet6>;
+		};
+		ethernet@3 {
+			compatible = "fsl,t2080-dpa-ethernet","fsl,dpa-ethernet";
+			fsl,fman-mac = <&enet7>;
+		};
 	};
 };
 
