--- a/sources/meta-ioxos/recipes-kernel/linux/linux-qoriq-4.9/ifc14xx.dts
+++ b/sources/meta-ioxos/recipes-kernel/linux/linux-qoriq-4.9/ifc14xx.dts
@@ -58,6 +58,18 @@
                         rcpm-wakeup = <&rcpm 0x80000000>;
 		};
 
+		ethernet@f0000 { /* DTSEC9/10GEC1 */
+			fixed-link = <2 1 1000 0 0>;
+			phy-connection = "xgmii";
+			lane-instance = "lane-a";
+		};
+
+		ethernet@f2000 { /* DTSEC10/10GEC2 */
+			fixed-link = <3 1 1000 0 0>;
+			phy-connection = "xgmii";
+			lane-instance = "lane-b";
+		};
+
 		mdio@fc000 {
 			#address-cells = <1>;
 			#size-cells = <0>;
