Update to QORIQ SDK 2.6

--- a/sources/meta-ioxos/conf/distro/ifc14xx.conf
+++ b/sources/meta-ioxos/conf/distro/ifc14xx.conf
@@ -26,17 +26,10 @@ BOOT_TYPE_ls1088a = "qspi"
 BOOT_TYPE_ls2088a = "qspi"
 
 PREFERRED_PROVIDER_qemu_qoriq = "qemu-qoriq"
-PREFERRED_VERSION_linux-qoriq_qoriq-ppc = "4.9"
-PREFERRED_VERSION_diffutils_qoriq-ppc = "3.3"
-PREFERRED_VERSION_nativesdk-diffutils_qoriq-ppc = "3.3"
 
-PREFERRED_PROVIDER_virtual/nativesdk-crypt_qoriq-ppc = "nativesdk-glibc"
-PREFERRED_PROVIDER_virtual/nativesdk-crypt_qoriq-arm64 = "nativesdk-libxcrypt"
-PREFERRED_PROVIDER_virtual/nativesdk-crypt_qoriq-arm = "nativesdk-libxcrypt"
-
-GCCVERSION_qoriq-ppc = "4.9.2"
-BINUVERSION_qoriq-ppc = "2.25"
-GLIBCVERSION_qoriq-ppc = "2.20"
+PREFERRED_VERSION_linux-qoriq_qoriq-ppc = "4.14"
 PREFERRED_VERSION_virtual/nativesdk-libiconv = "2.20"
 TARGET_CC_KERNEL_ARCH_e6500 = " -m64"
 TARGET_LD_KERNEL_ARCH_e6500 = " -melf64ppc"
+
+GIO_MODULE_PACKAGES = ""
