--- a/sources/meta-ioxos/conf/layer.conf
+++ b/sources/meta-ioxos/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "ifc14xx"
 BBFILE_PATTERN_ifc14xx = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ifc14xx = "6"
 
-LAYERSERIES_COMPAT_ifc14xx = "sumo"
+LAYERSERIES_COMPAT_ifc14xx = "sumo thud"
 
