--- a/sources/meta-ioxos/recipes-bsp/u-boot/u-boot-qoriq-2018.03/IFC14XX_defconfig
+++ b/sources/meta-ioxos/recipes-bsp/u-boot/u-boot-qoriq-2018.03/IFC14XX_defconfig
@@ -1,6 +1,7 @@
 CONFIG_PPC=y
+CONFIG_SYS_TEXT_BASE=0xEFF40000
 CONFIG_MPC85xx=y
-CONFIG_TARGET_IFC1410=y
+CONFIG_TARGET_IFC14XX=y
 # looks like the CONFIG_SYS_EXTRA_OPTIONS="PPC_T2080" is not used anymore
 # CONFIG_SYS_EXTRA_OPTIONS="PPC_T2080"
 # not available in IOxOS original
