--- a/sources/meta-ioxos/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ioxos/conf/machine/ifc14xx-64b.conf
@@ -28,7 +28,7 @@ IMAGE_INSTALL_append = " i2c-tools eth-config fmc nfs-utils readline \
                          perl-module-posix kernel-module-tsc tscmon \
                          coreutils sysfsutils sysklogd libhugetlbfs \
                          kmod kernel-modules sysstat pciutils screen \
-                         ifc14xx-conf procserv"
+                         ifc14xx-conf procserv libtirpc"
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
 
