Change BBFILE_COLLECTIONS name to ess

--- a/sources/meta-ess/conf/layer.conf
+++ b/sources/meta-ess/conf/layer.conf
@@ -5,9 +5,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "ifc14xx"
-BBFILE_PATTERN_ifc14xx = "^${LAYERDIR}/"
-BBFILE_PRIORITY_ifc14xx = "6"
+BBFILE_COLLECTIONS += "ess"
+BBFILE_PATTERN_ess = "^${LAYERDIR}/"
+BBFILE_PRIORITY_ess = "6"
 
-LAYERSERIES_COMPAT_ifc14xx = "sumo thud"
+LAYERSERIES_COMPAT_ess = "sumo thud"
 
