--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,46 @@ build_toolchain:
       - build_ifc14xx-64b/tmp/deploy/sdk
     expire_in: 24 hour
 
+build_image_cct:
+  tags:
+    - yocto
+  stage: build
+  image: crops/yocto:debian-9-base
+  before_script:
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan -t rsa gitlab.esss.lu.se >> ~/.ssh/known_hosts
+  script:
+    - . ./setup-env -m cct-64 -j 8 -t 8
+    - bitbake cct-image
+  artifacts:
+    paths:
+      - build_cct-64/tmp/deploy/images/cct-64
+      - sstate-cache/
+      - downloads/
+    expire_in: 24 hour
+
+build_toolchain_cct:
+  tags:
+    - yocto
+  stage: build
+  image: crops/yocto:debian-9-base
+  before_script:
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan -t rsa gitlab.esss.lu.se >> ~/.ssh/known_hosts
+  script:
+    - . ./setup-env -m cct-64 -j 8 -t 8
+    - bitbake cct-toolchain
+  artifacts:
+    paths:
+      - build_cct-64/tmp/deploy/sdk
+    expire_in: 24 hour
+
 release_sstate:
   tags:
     - yocto
@@ -136,5 +176,42 @@ release_toolchain_web:
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_ifc14xx-64b/tmp/deploy/sdk && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" yocto/toolchain/
+    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
+
+release_images_cct_tags:
+  only:
+    - tags
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/
+
+release_images_cct_web:
+  only:
+    - web
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/
+
+release_toolchain_cct_web:
+  only:
+    - web
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-64/tmp/deploy/sdk && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
