--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,6 +88,27 @@ build_image_cct:
       - downloads/
     expire_in: 24 hour
 
+build_image_rt_cct:
+  tags:
+    - yocto
+  stage: build
+  image: crops/yocto:debian-9-base
+  before_script:
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan -t rsa gitlab.esss.lu.se >> ~/.ssh/known_hosts
+  script:
+    - . ./setup-env -m cct-rt-64 -j 8 -t 8
+    - bitbake cct-image
+  artifacts:
+    paths:
+      - build_cct-rt-64/tmp/deploy/images/cct-rt-64
+      - sstate-cache/
+      - downloads/
+    expire_in: 24 hour
+
 build_toolchain_cct:
   tags:
     - yocto
@@ -154,6 +175,18 @@ release_images_web:
     - cd build_ifc14xx-64b/tmp/deploy/images/ifc14xx-64b && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_PIPELINE_ID/
 
+release_images_rt_tags:
+  only:
+    - tags
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_ifc14xx-rt-64b/tmp/deploy/images/ifc14xx-rt-64b
+    - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_COMMIT_TAG/rt/
+
 release_images_rt_web:
   only:
     - web
@@ -202,6 +235,30 @@ release_images_cct_web:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/
+
+release_images_rt_cct_tags:
+  only:
+    - tags
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64 && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/rt/
+
+release_images_rt_cct_web:
+  only:
+    - web
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64 && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/rt/
 
 release_toolchain_cct_web:
   only:
