Move initramfs setup to respective machine conf

--- a/sources/meta-ess/conf/distro/cct.conf
+++ b/sources/meta-ess/conf/distro/cct.conf
@@ -5,5 +5,5 @@ DISTRO_NAME = "Concurrent CPU SDK"
 
 SDK_VERSION = "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}-4.14"
 
-PACKAGECONFIG_append_pn-systemd = " resolved networkd"
+PACKAGECONFIG_append_pn-systemd = " resolved networkd hostnamed polkit"
 
