--- a/sources/meta-ess/conf/machine/ifc14xx-rt-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-rt-64b.conf
@@ -35,3 +35,8 @@ IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
 
 SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS1"
+
+# Initramfs Options
+INITRAMFS_IMAGE = "ifc14xx-image-initramfs"
+INITRAMFS_IMAGE_BUNDLE = "1"
+
