Remove root user and add iocuser/iocgroup
	Fixes ICSHWI-2171

--- a/sources/meta-ess/conf/machine/ifc14xx-rt-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-rt-64b.conf
@@ -30,7 +30,7 @@ IMAGE_INSTALL_append = " i2c-tools eth-config fmc nfs-utils readline \
                          perl-module-posix kernel-module-tsc tscmon \
                          coreutils sysfsutils sysklogd libhugetlbfs \
                          kmod kernel-modules sysstat pciutils screen \
-                         ifc14xx-conf procserv libtirpc"
+                         ifc14xx-conf procserv libtirpc sudo"
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
 
