--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -40,7 +40,7 @@ IMAGE_FSTYPES += "wic"
 WKS_FILE ?= "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot", "systemd-bootdisk-microcode.wks", "grub-bootdisk-microcode.wks", d)}"
 WKS_FILE_DEPENDS_append = " intel-microcode"
 
-IMAGE_INSTALL_append = " polkit eth-config nfs-utils readline \
+IMAGE_INSTALL_append = " sudo polkit eth-config nfs-utils readline \
                          boost curl libxml2 zlib libpng nano tree perl \
                          perl-module-posix kernel-module-tsc tscmon \
                          coreutils sysfsutils sysklogd libhugetlbfs \
