Add rpm uploads to gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,11 +20,13 @@ build_image:
   script:
     - . ./setup-env -m ifc14xx-64b -j 8 -t 8
     - bitbake ifc14xx-image
+    - bitbake package-index
   artifacts:
     paths:
       - build_ifc14xx-64b/tmp/deploy/images/ifc14xx-64b
       - sstate-cache/
       - downloads/
+      - build_ifc14xx-64b/tmp/deploy/rpm
     expire_in: 24 hour
 
 build_image_rt:
@@ -41,11 +43,13 @@ build_image_rt:
   script:
     - . ./setup-env -m ifc14xx-rt-64b -j 8 -t 8
     - bitbake ifc14xx-image
+    - bitbake package-index
   artifacts:
     paths:
       - build_ifc14xx-rt-64b/tmp/deploy/images/ifc14xx-rt-64b
       - sstate-cache/
       - downloads/
+      - build_ifc14xx-rt-64b/tmp/deploy/rpm
     expire_in: 24 hour
 
 build_toolchain:
@@ -81,11 +85,13 @@ build_image_cct:
   script:
     - . ./setup-env -m cct-64 -j 8 -t 8
     - bitbake cct-image
+    - bitbake package-index
   artifacts:
     paths:
       - build_cct-64/tmp/deploy/images/cct-64
       - sstate-cache/
       - downloads/
+      - build_cct-64/tmp/deploy/rpm
     expire_in: 24 hour
 
 build_image_rt_cct:
@@ -102,11 +108,13 @@ build_image_rt_cct:
   script:
     - . ./setup-env -m cct-rt-64 -j 8 -t 8
     - bitbake cct-image
+    - bitbake package-index
   artifacts:
     paths:
       - build_cct-rt-64/tmp/deploy/images/cct-rt-64
       - sstate-cache/
       - downloads/
+      - build_cct-rt-64/tmp/deploy/rpm
     expire_in: 24 hour
 
 build_toolchain_cct:
@@ -274,3 +282,99 @@ release_toolchain_cct_web:
     - jfrog rt upload --flat=false "*" yocto/toolchain/
     - echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
+
+release_rpm_tags:
+  only:
+    - tags
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_ifc14xx-64b/tmp/deploy/rpm
+    - jfrog rt upload --flat=false "*" ics-rpm/ioxos/
+
+release_rpm_rt_tags:
+  only:
+    - tags
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_ifc14xx-rt-64b/tmp/deploy/rpm/ifc14xx_rt_64b
+    - jfrog rt upload --flat=false "*" ics-rpm/ioxos/ifc14xx_rt_64b/
+
+release_rpm_web:
+  only:
+    - web
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_ifc14xx-64b/tmp/deploy/rpm
+    - jfrog rt upload --flat=false "*" ics-rpm/ioxos/
+
+release_rpm_rt_web:
+  only:
+    - web
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_ifc14xx-rt-64b/tmp/deploy/rpm/ifc14xx_rt_64b
+    - jfrog rt upload --flat=false "*" ics-rpm/ioxos/ifc14xx_rt_64b/
+
+release_rpm_cct_tags:
+  only:
+    - tags
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-64/tmp/deploy/rpm
+    - jfrog rt upload --flat=false "*" ics-rpm/cct/
+
+release_rpm_rt_cct_tags:
+  only:
+    - tags
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-rt-64/tmp/deploy/rpm/cct_rt_64
+    - jfrog rt upload --flat=false "*" ics-rpm/cct/cct_rt_64/
+
+release_rpm_cct_web:
+  only:
+    - web
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-64/tmp/deploy/rpm
+    - jfrog rt upload --flat=false "*" ics-rpm/cct/
+
+release_rpm_rt_cct_web:
+  only:
+    - web
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-rt-64/tmp/deploy/rpm/cct_rt_64
+    - jfrog rt upload --flat=false "*" ics-rpm/cct/cct_rt_64/
